--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collabcrm-lite-test",
+  "name": "collabcrm-lite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,15 +7,24 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"**/*\"",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "@tanstack/react-query": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@graphql-codegen/cli": "^3.0.0",
+    "@graphql-codegen/typescript": "^3.0.0",
+    "@graphql-codegen/typescript-operations": "^3.0.0",
+    "@graphql-codegen/typescript-react-query": "^3.0.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -23,9 +32,13 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "msw": "^2.10.2",
+    "msw": "^2.0.0",
+    "@testing-library/react": "^15.2.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^1.5.0",
+    "prettier": "^3.2.5",
+    "eslint-config-prettier": "^9.0.0"
   }
 }
